Floatin mode button on mobile

--- a/scss/mobile/_mobile.scss
+++ b/scss/mobile/_mobile.scss
@@ -2,6 +2,8 @@
 @forward '../shared/cutouts';
 @forward '../shared/workleaves';
 
+@use 'floating-mode-button';
+
 .is-mobile {
     --font-ui-smaller: 13.5px;
     --font-ui-small: 14px;
