--- a/publish.css
+++ b/publish.css
@@ -5024,9 +5024,33 @@ body,
   padding-right: var(--size-2-2);
 }
 
+body {
+  --workspace-gap: 10px;
+}
+
 .workspace,
 .workspace-split {
-  gap: 10px;
+  gap: var(--workspace-gap);
+}
+
+.mod-left-split > .workspace-leaf-resize-handle {
+  transform: translateX(calc(0.5 * var(--workspace-gap) + var(--divider-width-hover) * 0.5));
+}
+
+.mod-right-split > .workspace-leaf-resize-handle {
+  transform: translateX(calc(-0.5 * var(--workspace-gap) - var(--divider-width-hover) * 0.5));
+}
+
+.mod-vertical > div > .workspace-leaf-resize-handle {
+  transform: translateX(calc(0.5 * var(--workspace-gap) + var(--divider-width-hover) * 0.5));
+}
+
+.mod-horizontal > div > .workspace-leaf-resize-handle {
+  transform: translateY(calc(0.5 * var(--workspace-gap) + var(--divider-width-hover) * 0.5));
+}
+
+.mod-root .workspace-tabs {
+  overflow: visible;
 }
 
 .workspace-split.mod-root {
