--- a/scss/window/_workspace.scss
+++ b/scss/window/_workspace.scss
@@ -13,9 +13,28 @@ body,
 }
 
 // ----------- Gap between panes ----------- 
+body {
+    --workspace-gap: 10px;
+}
 .workspace,
 .workspace-split {
-    gap: 10px;
+    gap: var(--workspace-gap);
+}
+
+.mod-left-split > .workspace-leaf-resize-handle {
+    transform: translateX(calc(0.5 * var(--workspace-gap) + var(--divider-width-hover) * 0.5));
+}
+.mod-right-split > .workspace-leaf-resize-handle {
+    transform: translateX(calc(-0.5 * var(--workspace-gap) - var(--divider-width-hover) * 0.5));
+}
+.mod-vertical > div > .workspace-leaf-resize-handle {
+    transform: translateX(calc(0.5 * var(--workspace-gap) + var(--divider-width-hover) * 0.5));
+}
+.mod-horizontal > div > .workspace-leaf-resize-handle {
+    transform: translateY(calc(0.5 * var(--workspace-gap) + var(--divider-width-hover) * 0.5));
+}
+.mod-root .workspace-tabs {
+    overflow: visible;
 }
 
 // ----------- Mod root ----------- 
