Update app background image

--- a/scss/window/_fas-app-background-image.scss
+++ b/scss/window/_fas-app-background-image.scss
@@ -1,5 +1,5 @@
 body {
-    --fas-background-image-url: url('https://images6.alphacoders.com/132/1323880.png');
+    --fas-background-image-url: url('');
     --fas-background-image-blur: 0px;
     --fas-background-image-opacity: 1;
 }
