--- a/scss/editor/_properties.scss
+++ b/scss/editor/_properties.scss
@@ -36,6 +36,9 @@ body {
             var(--workleaves-background) var(--heading-padding-inline),
             var(--workleaves-background) calc(100% - var(--heading-padding-inline)),
             transparent 100%);
+        background-size: 100% 5px;
+        background-repeat: no-repeat;
+        background-position: center calc(50% + 1px);
         padding-inline: var(--heading-padding-inline);
     }
 }
