--- a/css/editor/callouts/callout-timeline.css
+++ b/css/editor/callouts/callout-timeline.css
@@ -71,6 +71,8 @@ body {
   --callout-content-padding: var(--card-padding);
   --callout-title-padding: var(--size-2-2);
   --callout-title-size: 0.8em;
+  --bullet-border-color: rgb(var(--callout-color));
+  --segment-border-color: rgb(var(--callout-color));
   padding: 0;
 }
 .callout[data-callout=timeline] > .callout-content > .callout .callout-title {
