--- a/scss/editor/callouts/_callout-timeline.scss
+++ b/scss/editor/callouts/_callout-timeline.scss
@@ -79,6 +79,8 @@
             --callout-content-padding: var(--card-padding);
             --callout-title-padding: var(--size-2-2);
             --callout-title-size: 0.8em;
+            --bullet-border-color: rgb(var(--callout-color));
+            --segment-border-color: rgb(var(--callout-color));
             padding: 0;
             .callout-title {
                 justify-content: flex-end;
