--- a/scss/css/editor/callouts/callout-film-strip.scss
+++ b/scss/css/editor/callouts/callout-film-strip.scss
@@ -6,7 +6,7 @@ Author: ElsaTam (Kapirklaa in Discord)
 @use '../../../editor/callouts/callout-film-strip';
 
 /* Fix for Minimal theme and img-grid cssclass */
-.callout[data-callout=film-strip] .callout-content > p:has(>.image-embed) {
-    display: flex;
+.callout[data-callout=film-strip] .callout-content > p {
+    display: flex !important;
     gap: 0;
 }
