--- a/css/editor/callouts/callout-masonry.css
+++ b/css/editor/callouts/callout-masonry.css
@@ -90,8 +90,8 @@ body {
 }
 
 /* Fix for Minimal theme and img-grid cssclass */
-.callout[data-callout=masonry]:not([data-callout-metadata=horizontal]) > .callout-content > p:has(> .image-embed) {
-  display: block;
+.callout[data-callout=masonry]:not([data-callout-metadata=horizontal]) > .callout-content > p {
+  display: block !important;
   column-gap: 0.5rem;
 }
 
