--- a/scss/cssclasses/_columns.scss
+++ b/scss/cssclasses/_columns.scss
@@ -49,7 +49,7 @@ $stop3: 900px;
 
 :is(.columns-2, .columns-3, .columns-4).markdown-preview-view .markdown-preview-pusher,
 :is(.columns-2, .columns-3, .columns-4).markdown-preview-view .mod-header,
-:is(.columns-2, .columns-3, .columns-4).markdown-preview-view div:has(.frontmatter), // TODO: replace with .mod-frontmatter on 1.7.3 release
+:is(.columns-2, .columns-3, .columns-4).markdown-preview-view .mod-frontmatter,
 :is(.columns-2, .columns-3, .columns-4).markdown-preview-view :is(h1),
 :is(.columns-2, .columns-3, .columns-4).markdown-preview-view [alt~="span"] {
     column-span: all;
