--- a/snippets/cssclasses/newspaper.css
+++ b/snippets/cssclasses/newspaper.css
@@ -105,7 +105,7 @@ body {
     right: 0;
   }
 }
-.newspaper div:has(> .frontmatter) + div ~ div > h1,
+.newspaper .mod-frontmatter + div ~ div > h1,
 .newspaper .cm-content > .cm-line ~ .HyperMD-header-1 {
   border-top: 1px solid var(--text-normal);
 }
